--- a/Assignments/A0-LinAlgComplex.ipynb
+++ b/Assignments/A0-LinAlgComplex.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Kevin Gonzalez\n",
+    "* A99090166\n",
+    "* Cogs 118C- Assignment 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# This notebook has [15] points in total \n",
     "##### The number of points for each question is denoted by []. Make sure you've answered all the questions and that the point total add up."
    ]
@@ -232,11 +241,11 @@
    },
    "outputs": [],
    "source": [
-    "basis_x = #_FILL_IN_YOUR_CODE_HERE\n",
-    "basis_y = #_FILL_IN_YOUR_CODE_HERE\n",
+    "basis_x = [1,0]\n",
+    "basis_y = [0,1]\n",
     "\n",
-    "my_vec = # store their summation in a third variable\n",
-    "print() # print the result of their summation"
+    "my_vec = basis_x + basis_y\n",
+    "print(my_vec) # print the result of their summation"
    ]
   },
   {
@@ -628,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
