--- a/Assignments/A0-LinAlgComplex.ipynb
+++ b/Assignments/A0-LinAlgComplex.ipynb
@@ -678,17 +678,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4142135623730951 0.7853981633974483\n",
+      "1.4142135623730951 0.7853981633974483\n"
+     ]
+    }
+   ],
    "source": [
     "z_real = z.real\n",
     "z_imag = z.imag\n",
     "\n",
-    "z_mag = np.sum(_FILL_IN_YOUR_CODE_HERE)**0.5\n",
-    "z_ang = np.arctan(_FILL_IN_YOUR_CODE_HERE)\n",
+    "z_mag = np.sum(z_real**2+z_imag**2)**0.5\n",
+    "z_ang = np.arctan(z_imag/z_real)\n",
     "\n",
     "print(z_mag, z_ang)\n",
     "print(np.abs(z), np.angle(z))"
