--- a/Assignments/A0-LinAlgComplex.ipynb
+++ b/Assignments/A0-LinAlgComplex.ipynb
@@ -710,25 +710,34 @@
     "\n",
     "[1] Looking at the plot where z and w are plotted as arrows, what is the angle (in radians or degrees) between those two vectors?\n",
     "\n",
-    "ANSWER:\n",
+    "ANSWER: 1/2pi radians\n",
     "\n",
     "[1] What do you expect is the dot product of z and w? Why? Make an argument without explicitly computing it.\n",
     "\n",
-    "ANSWER:\n",
+    "ANSWER: It should be 1. They are perpendicular lines so they cancel the angle out, but keeps magnitude of 1 in x direction \n",
     "\n",
     "[1] In the cell below, convert the complex number z and w into length-2 arrays, and confirm that the dot product is what you expected."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "z_arr = np.array([_FILL_IN_YOUR_CODE_HERE])\n",
-    "w_arr = np.array([_FILL_IN_YOUR_CODE_HERE])\n",
+    "z_arr = np.array(z.real)\n",
+    "w_arr = np.array(z.imag)\n",
     "np.dot(z_arr,w_arr)"
    ]
   },
