--- a/Assignments/A0-LinAlgComplex.ipynb
+++ b/Assignments/A0-LinAlgComplex.ipynb
@@ -488,7 +488,7 @@
     "\n",
     "[1] What is this property called?\n",
     "\n",
-    "ANSWER: Identity\n",
+    "ANSWER: Orthogonal \n",
     "\n",
     "---\n",
     "[1] Confirm that this is the case in code below. You can use either your dot product function or numpy's."
@@ -714,30 +714,30 @@
     "\n",
     "[1] What do you expect is the dot product of z and w? Why? Make an argument without explicitly computing it.\n",
     "\n",
-    "ANSWER: It should be 1. They are perpendicular lines so they cancel the angle out, but keeps magnitude of 1 in x direction \n",
+    "ANSWER: It should be 0. They are orthogonal so they should cancel each other out. (equivalent to the question above about [1,0] [0,1])\n",
     "\n",
     "[1] In the cell below, convert the complex number z and w into length-2 arrays, and confirm that the dot product is what you expected."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z_arr = np.array(z.real)\n",
-    "w_arr = np.array(z.imag)\n",
+    "z_arr = np.array([z.real,z.imag])\n",
+    "w_arr = np.array([w.real,w.imag])\n",
     "np.dot(z_arr,w_arr)"
    ]
   },
@@ -763,12 +763,12 @@
     "# Content:\n",
     "What was one thing you learned from this lab & associated lectures?\n",
     "\n",
-    "ANSWER: \n",
+    "ANSWER: plotting imaginary numbers\n",
     "\n",
     "---\n",
     "What was one thing that you still found confusing after the lab, and need clarification?\n",
     "\n",
-    "ANSWER:"
+    "ANSWER: Imaginary numbers are still weird to think of in python (how python represents them("
    ]
   },
   {
@@ -778,12 +778,12 @@
     "# Style:\n",
     "What was one thing you enjoyed about the formatting of this assignment (e.g., clarity, structure, guidance, etc.)?\n",
     "\n",
-    "Answer:\n",
+    "Answer:  The command mode. I had no idea it existed.\n",
     "\n",
     "---\n",
     "What was one thing that you thought could use improvements on?\n",
     "\n",
-    "Answer:\n"
+    "Answer: Style looks good in my opinion\n"
    ]
   },
   {
