--- a/Assignments/A1-SamplingTimeSeries.ipynb
+++ b/Assignments/A1-SamplingTimeSeries.ipynb
@@ -404,14 +404,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  3  5  8 10 12 14 17 19 21]\n",
       "[0.001 0.003 0.005 0.008 0.01  0.012 0.014 0.017 0.019 0.021]\n",
       "[ 1.     3.375  5.87   8.183 10.419 12.588 14.87  17.086 19.164 21.237]\n"
      ]
@@ -419,17 +418,15 @@
    ],
    "source": [
     "def compute_EEG_indices(event_timestamps, fs):\n",
-    "    # _FILL_IN_YOUR_CODE_HERE\n",
     "    result = np.array([t_EEG[np.array(event_timestamps[0]*fs).astype(int)]])\n",
     "    for t in range(1,len(event_timestamps)):\n",
     "        result = np.append(result, t_EEG[np.array(event_timestamps[t]*fs).astype(int)])\n",
     "    return result.astype(int)\n",
     "# call your function to compute the corresponding indices\n",
     "EEG_indices = compute_EEG_indices([1.0,3.375,5.87,8.183, 10.419, 12.588, 14.87,17.086, 19.164, 21.237],1000)\n",
-    "print(EEG_indices)\n",
     "# print your solution and the actual event times to compare, they should be identical\n",
     "print(t_EEG[EEG_indices[:10]])\n",
-    "print(trial_info[:10,0])\n"
+    "print(trial_info[:10,0])"
    ]
   },
   {
