--- a/Assignments/A1-SamplingTimeSeries.ipynb
+++ b/Assignments/A1-SamplingTimeSeries.ipynb
@@ -518,23 +518,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_all_epochs(data, indices, fs, len_pre, len_post):\n",
     "    all_epochs = np.array([grab_epoch(data,indices[0],fs,len_pre,len_post)])\n",
     "    for i in range(0,len(indices)):\n",
-    "        all_epochs = np.vstack([all_epochs,[grab_epoch(data,indices[i],fs,len_pre,len_post)]])\n",
+    "        temp = baselining([grab_epoch(data,indices[i],fs,len_pre,len_post)],len_pre,fs)\n",
+    "        all_epochs = np.vstack([all_epochs,temp])\n",
     "    return np.array(all_epochs)\n",
     "def baselining(epoch,len_pre,fs):\n",
-    "    return (epoch / (np.mean(epoch[0:int(len_pre*fs)])))\n",
+    "    return (epoch / (np.mean(epoch[0:int(-len_pre*fs)])))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -547,10 +548,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0xb255292e8>"
+       "<matplotlib.legend.Legend at 0xb2679cb38>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     },
