--- a/Assignments/A3-TimeFrequencyFiltering.ipynb
+++ b/Assignments/A3-TimeFrequencyFiltering.ipynb
@@ -356,15 +356,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Response for 2.1:** ANSWER\n",
+    "**Response for 2.1:** 20 windows\n",
     "\n",
-    "**Response for 2.2:** ANSWER\n",
+    "**Response for 2.2:** 10th: = 10.001s 11th=11.001s 12th=12.001s\n",
     "\n",
-    "**Response for 2.3:** ANSWER\n",
+    "**Response for 2.3:** fs*windownum so 10th:10,000 11th:11,000 12th:12,000\n",
     "\n",
-    "**Response for 2.4:** ANSWER\n",
+    "**Response for 2.4:** 39 windows 10th = 4.501s 11th = 5.001s 12th = 5.501s\n",
     "\n",
-    "**Response for 2.5:** ANSWER\n"
+    "**Response for 2.5:** 10th: 4500 11th: 5000 12th: 5500\n"
    ]
   },
   {
